2006-11-06  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-background-dialog.c: Also react to
	the _RESPONSE_DELETE_EVENT. Fixes: NB#42484 (comment 3)

2006-11-06  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.99.4

2006-11-06  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-reset-menu.sh: Added backup
	restore script to reset the menu to the default layout
	when restoring from an old release. Fixes: NB#46468

2006-11-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.c: Add gdk_window_wrapper
	member used to keep the window on which the filter was set
	* hildon-navigator/hn-wm.c: Add StructureNotify to the event mask of each
	window, so GDK can remove the GdkWindow from the XID list when the window
	is gone. Fixes: NB#46255

2006-11-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-item.c: Force the item
	  buttons to be exacty 50px height. Fixes: NB#40907

2006-11-02  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.99.3

2006-11-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Keep a pointer to the active
	  menu item. Fixes: NB#46305

2006-11-02  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Glib CRITICAL errors from Task Navigator"
	Fixes: NB#41105
	* hildon-navigator/hn-app-switcher.c: Check we have a button
	  before calling hn_app_button_force_update_icon().
	  
2006-11-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-item.c: Fixed small memory leak

2006-11-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-others-button.c: Initialize the menu after
	  the first press. Fixes: NB#46240

2006-11-01  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm.c: Accept windows which have not set
	  the WM_WINDOW_TYPE property, if they are not transient to anything
	  (dialogs). Fixes: NB#46122
